# cpp-refactoring

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: googletest.yml
cmake/: googletest-download.cmake  googletest.cmake
src/: CMakeLists.txt  Category.cpp  Category.h  Customer.cpp  Customer.h  Movie.h  Rental.h  example.cpp  example.h  main.cpp
src/testing/: Category_test.h  Movie_test.h
test/: CMakeLists.txt  test_categories.cpp  test_example.cpp  test_integration.cpp  test_movies.cpp  test_rental.cpp
